Improve ckeckstyle